@@ -1,4 +1,11 @@
-$Id: ChangeLog 4346 2016-09-28 21:34:56Z chrfranke $
+$Id: ChangeLog 4348 2016-10-03 12:48:27Z chrfranke $
+
+2016-10-03  Christian Franke  <franke@computer.org>
+
+	os_win32.cpp: Use new enhanced version of IOCTL_STORAGE_QUERY_PROPERTY
+	to access NVMe info.  This works with Windows 10 NVMe driver
+	(stornvme.sys) (ticket #691).
+	smartctl.8.in, smartd.8.in: Document device names.
 
 2016-09-28  Christian Franke  <franke@computer.org>
 
